# everbit

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
.cursor/rules/: toss-frontend-rules.mdc
.githooks/: commit-msg
.github/workflows/: ci.yml  deploy.yaml
algorithm/: .env.example  README.md  pyproject.toml  requirements.txt
algorithm/src/: main.py
algorithm/src/backtest/: runner.py
algorithm/src/strategies/: base_strategy.py  bollinger_rsi.py  factory.py  ma_crossover.py
client/: .env.production  .gitignore  Dockerfile  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vercel.json
client/src/: providers.tsx  theme.ts
docs/: README.md  roadmap.md
docs/adr/: 0001-branching-v1-v2.md  0001-git-strategy.md  0002-single-tenant.md  0003-postgresql.md  0004-kafka-selfhost-on-oci.md  0005-upbit-key-encryption.md  0006-admin-surface-access.md  0007-auth-session.md  0008-web-push-notification.md  0009-postgres-outbox-queue-v2-mvp.md  0010-multi-user-everbit-key.md  README.md
docs/api/: contracts.md  server-implementation-guide.md
docs/architecture/: components.md  data-model.md  entity-model-audit-2026-03-06.md  event-bus.md  jpa-mapping.md  kafka-topics.md  modular-monolith.md  order-pipeline.md  overview.md  push-notification.md  push-notifications.md  (+1 more)
server/: Dockerfile  build.gradle  settings.gradle
(+500 files in other folders)
